feat: documentNecessaires and documentInformatifs should be array of LinkDocumentType
